--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "autoprefixer": "10.4.17",
+    "postcss": "8.4.34",
     "prettier": "3.2.5",
+    "tailwindcss": "3.4.1",
     "typescript": "5.3.3",
     "vite": "5.0.12"
   }
